--- a/app/src/main/res/layout/fragment_luck.xml
+++ b/app/src/main/res/layout/fragment_luck.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/primary"
     tools:context=".ui.luck.LuckFragment">
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/ivRoulette"
+        android:layout_width="0dp"
+        android:layout_height="400dp"
+        android:src="@drawable/ruleta"
+        android:layout_marginBottom="-250dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageView
+        android:id="@+id/ivReverse"
+        android:layout_width="60dp"
+        android:src="@drawable/card_back_small"
+        android:visibility="invisible"
+        android:scaleType="fitStart"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
